--- a/BERT/bert.ipynb
+++ b/BERT/bert.ipynb
@@ -30,11 +30,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Understanding Query (Q), Key (K), and Value (V) in Transformers\n",
+    "\n",
+    "## Overview\n",
+    "Transformers use a self-attention mechanism to determine how much focus each token in a sequence should have on others. The three main components of self-attention are:\n",
+    "\n",
+    "### Query (Q)\n",
+    "- The **query** represents the token that is searching for relevant information.\n",
+    "- It determines **what the model is currently attending to**.\n",
+    "- Each token in a sequence generates its own query vector.\n",
+    "\n",
+    "### Key (K)\n",
+    "- The **key** represents the potential \"match\" or \"index\" for a given query.\n",
+    "- It determines **how relevant other tokens are** to the current query.\n",
+    "- Each token has a key vector, and the model computes the **similarity** between queries and keys.\n",
+    "\n",
+    "### Value (V)\n",
+    "- The **value** holds the actual content or information of each token.\n",
+    "- It determines **what information is retrieved** when attention is applied.\n",
+    "- The value vector is used to compute the final output.\n",
+    "\n",
+    "## How It Works\n",
+    "1. Each token in the sequence is mapped to its respective **Q, K, and V** vectors.\n",
+    "2. The similarity between **Q and K** is computed using a dot product.\n",
+    "3. The results are scaled and passed through a **softmax function** to generate attention scores.\n",
+    "4. These scores are used to weight the **V (Value)** vectors.\n",
+    "5. The final output is a weighted sum of the value vectors, emphasizing important tokens.\n",
+    "\n",
+    "## Mathematical Representation\n",
+    "The attention mechanism is defined as:\n",
+    "\n",
+    "\\[\\text{Attention}(Q, K, V) = \\text{softmax} \\left( \\frac{QK^T}{\\sqrt{d_k}} \\right) V\\]\n",
+    "\n",
+    "where:\n",
+    "- \\(QK^T\\) computes similarity scores between queries and keys.\n",
+    "- \\(\\sqrt{d_k}\\) is a scaling factor to prevent large values.\n",
+    "- **Softmax** normalizes the scores.\n",
+    "- The final result is multiplied with **V** to obtain the attended output.\n",
+    "\n",
+    "## Why It Matters\n",
+    "Self-attention allows transformers to capture long-range dependencies in text, making them highly effective for NLP tasks like machine translation, text summarization, and language modeling.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
