--- a/BERT/bert.ipynb
+++ b/BERT/bert.ipynb
@@ -78,6 +78,394 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example from https://medium.com/@khang.pham.exxact/text-classification-with-bert-7afaacc5e49b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data\n",
+    "# https://www.kaggle.com/datasets/lakshmi25npathi/imdb-dataset-of-50k-movie-reviews?resource=download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import DataLoader, Dataset\n",
+    "from transformers import BertTokenizer, BertModel, AdamW, get_linear_schedule_with_warmup\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sampling for reduce data lenght\n",
+    "def load_imdb_data(data_file):\n",
+    "    df = pd.read_csv(data_file).sample(frac=0.001)\n",
+    "    texts = df['review'].tolist()\n",
+    "    labels = [1 if sentiment == \"positive\" else 0 for sentiment in df['sentiment'].tolist()]\n",
+    "    return texts, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = \"IMDB Dataset.csv\"\n",
+    "texts, labels = load_imdb_data(data_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TextClassificationDataset(Dataset):\n",
+    "    def __init__(self, texts, labels, tokenizer, max_length):\n",
+    "            self.texts = texts\n",
+    "            self.labels = labels\n",
+    "            self.tokenizer = tokenizer\n",
+    "            self.max_length = max_length\n",
+    "    def __len__(self):\n",
+    "        return len(self.texts)\n",
+    "    def __getitem__(self, idx):\n",
+    "        text = self.texts[idx]\n",
+    "        label = self.labels[idx]\n",
+    "        encoding = self.tokenizer(text, return_tensors='pt', max_length=self.max_length, padding='max_length', truncation=True)\n",
+    "        return {'input_ids': encoding['input_ids'].flatten(), 'attention_mask': encoding['attention_mask'].flatten(), 'label': torch.tensor(label)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BERTClassifier(nn.Module):\n",
+    "    def __init__(self, bert_model_name, num_classes):\n",
+    "        super(BERTClassifier, self).__init__()\n",
+    "        self.bert = BertModel.from_pretrained(bert_model_name)\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "        self.fc = nn.Linear(self.bert.config.hidden_size, num_classes)\n",
+    "\n",
+    "    def forward(self, input_ids, attention_mask):\n",
+    "            outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "            pooled_output = outputs.pooler_output\n",
+    "            x = self.dropout(pooled_output)\n",
+    "            logits = self.fc(x)\n",
+    "            return logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, data_loader, optimizer, scheduler, device):\n",
+    "    model.train()\n",
+    "    for batch in data_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        input_ids = batch['input_ids'].to(device)\n",
+    "        attention_mask = batch['attention_mask'].to(device)\n",
+    "        labels = batch['label'].to(device)\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        loss = nn.CrossEntropyLoss()(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        scheduler.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, data_loader, device):\n",
+    "    model.eval()\n",
+    "    predictions = []\n",
+    "    actual_labels = []\n",
+    "    with torch.no_grad():\n",
+    "        for batch in data_loader:\n",
+    "            input_ids = batch['input_ids'].to(device)\n",
+    "            attention_mask = batch['attention_mask'].to(device)\n",
+    "            labels = batch['label'].to(device)\n",
+    "            outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "            _, preds = torch.max(outputs, dim=1)\n",
+    "            predictions.extend(preds.cpu().tolist())\n",
+    "            actual_labels.extend(labels.cpu().tolist())\n",
+    "    return accuracy_score(actual_labels, predictions), classification_report(actual_labels, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_sentiment(text, model, tokenizer, device, max_length=128):\n",
+    "    model.eval()\n",
+    "    encoding = tokenizer(text, return_tensors='pt', max_length=max_length, padding='max_length', truncation=True)\n",
+    "    input_ids = encoding['input_ids'].to(device)\n",
+    "    attention_mask = encoding['attention_mask'].to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        _, preds = torch.max(outputs, dim=1)\n",
+    "        return \"positive\" if preds.item() == 1 else \"negative\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up parameters\n",
+    "bert_model_name = 'bert-base-uncased'\n",
+    "num_classes = 2\n",
+    "max_length = 128\n",
+    "batch_size = 16\n",
+    "num_epochs = 4\n",
+    "learning_rate = 2e-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_texts, val_texts, train_labels, val_labels = train_test_split(texts, labels, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = BertTokenizer.from_pretrained(bert_model_name)\n",
+    "train_dataset = TextClassificationDataset(train_texts, train_labels, tokenizer, max_length)\n",
+    "val_dataset = TextClassificationDataset(val_texts, val_labels, tokenizer, max_length)\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = BERTClassifier(bert_model_name, num_classes).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\transformers\\optimization.py:640: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = AdamW(model.parameters(), lr=learning_rate)\n",
+    "total_steps = len(train_dataloader) * num_epochs\n",
+    "scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps=0, num_training_steps=total_steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.7000\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         3\n",
+      "           1       0.70      1.00      0.82         7\n",
+      "\n",
+      "    accuracy                           0.70        10\n",
+      "   macro avg       0.35      0.50      0.41        10\n",
+      "weighted avg       0.49      0.70      0.58        10\n",
+      "\n",
+      "Epoch 2/4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.7000\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         3\n",
+      "           1       0.70      1.00      0.82         7\n",
+      "\n",
+      "    accuracy                           0.70        10\n",
+      "   macro avg       0.35      0.50      0.41        10\n",
+      "weighted avg       0.49      0.70      0.58        10\n",
+      "\n",
+      "Epoch 3/4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.7000\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         3\n",
+      "           1       0.70      1.00      0.82         7\n",
+      "\n",
+      "    accuracy                           0.70        10\n",
+      "   macro avg       0.35      0.50      0.41        10\n",
+      "weighted avg       0.49      0.70      0.58        10\n",
+      "\n",
+      "Epoch 4/4\n",
+      "Validation Accuracy: 0.7000\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.00      0.00      0.00         3\n",
+      "           1       0.70      1.00      0.82         7\n",
+      "\n",
+      "    accuracy                           0.70        10\n",
+      "   macro avg       0.35      0.50      0.41        10\n",
+      "weighted avg       0.49      0.70      0.58        10\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Windows 11\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for epoch in range(num_epochs):\n",
+    "        print(f\"Epoch {epoch + 1}/{num_epochs}\")\n",
+    "        train(model, train_dataloader, optimizer, scheduler, device)\n",
+    "        accuracy, report = evaluate(model, val_dataloader, device)\n",
+    "        print(f\"Validation Accuracy: {accuracy:.4f}\")\n",
+    "        print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"bert_classifier.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The movie was great and I really enjoyed the performances of the actors.\n",
+      "Predicted sentiment: positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test sentiment prediction\n",
+    "test_text = \"The movie was great and I really enjoyed the performances of the actors.\"\n",
+    "sentiment = predict_sentiment(test_text, model, tokenizer, device)\n",
+    "print(\"The movie was great and I really enjoyed the performances of the actors.\")\n",
+    "print(f\"Predicted sentiment: {sentiment}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
